# nonemptystr

./: README.md  nonemptystr.py  pyproject.toml  ruff.toml  setup.cfg  tasks.py
nonemptystr/: __init__.py  nonemptystr.py
tests/: test_nonemptystr.py  test_with_pydantic.py
