[tool.poetry]
name = "nonemptystr"
version = "1.0.0"
license = "MIT"
description = "Non-empty string"
authors = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
maintainers = ["Shiri Nekono <gexira.halen.toms@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nekonoshiri/nonemptystr"
repository = "https://github.com/nekonoshiri/nonemptystr"
documentation = "https://github.com/nekonoshiri/nonemptystr"
keywords = ["str"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
mypy = "^1.8.0"
pydantic = "^2.5.3"
pytest = "^7.4.4"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
